Fixed Z-Index :bug:

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,7 +18,7 @@ h1,h2,h3,h4,h5,h6{
 }
 
 nav{
-    z-index: 3;
+    z-index: 4
 }
 
 #landing-page{
